--- a/Tests.Qunit/index.html
+++ b/Tests.Qunit/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>QUnit Example</title>
-  <link rel="stylesheet" href="../node_modules/uri-js/tests/qunit.css">
+  <title>Unit tests using Qunit</title>
+  <link rel="stylesheet" href="../node_modules/qunit/qunit/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../node_modules/uri-js/tests/qunit.js"></script>
-  <script src="./db-query-string.test.js"></script>
+  <script src="../node_modules/qunit/qunit/qunit.js"></script>
+  <script src="./test-bundle.js"></script>
+  <!-- <script src="./db-query-string.test.js"></script> -->
 </body>
 </html>
